# consumer-intelligence

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py  script.py.mako
alembic/versions/: 4ae1cf2d0afd_add_conversations_messages_campaign_.py
app/: dashboard.py
data/processed/: association_rules.parquet  country_summary.parquet  customer_clv.parquet  customer_segments.parquet  customer_top_product_summary.parquet  monthly_summary.parquet  product_summary.parquet  propensity_scores.parquet
db/: schema.sql
docs/: langgraph-design.md
reports/: eda_phase0.md  phase1_segmentation.md  phase2_clv.md  phase3_basket_nbo.md  phase4_propensity.md
scripts/: benchmark_copilot_graph.py  build_product_summary.py  build_report_images.py  build_summaries.py  load_db.py  run_phase0.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  start_api.sh  start_dashboard.sh
sql/: analytics.sql
src/consumer_intel/: config.py  labels.py
src/consumer_intel/api/: app.py  deps.py  models.py
src/consumer_intel/basket/: nbo.py  rules.py
src/consumer_intel/clv/: historical.py  predictive.py  validate.py
src/consumer_intel/copilot/: context.py  narrator.py  schema.py
src/consumer_intel/copilot_graph/: __init__.py  campaign_graph.py  campaign_nodes.py  campaign_schema.py  campaign_state.py  chat.py  chat_schema.py  graph.py  nodes.py  state.py  streaming.py
src/consumer_intel/data/: clean.py  load.py
src/consumer_intel/db/: campaign_repository.py  checkpointer.py  engine.py  loader.py  models.py  repository.py
src/consumer_intel/eda/: profile.py
src/consumer_intel/features/: rfm.py
src/consumer_intel/propensity/: explain.py  features.py  model.py
src/consumer_intel/segmentation/: kmeans.py  rfm_score.py
tests/: conftest.py  test_api.py  test_basket.py  test_build_summaries.py  test_campaign_graph.py  test_campaign_nodes.py  test_campaign_repository.py  test_chat.py  test_checkpointer.py  test_clean.py  test_clv.py  test_copilot.py  test_copilot_graph.py  test_db.py  test_db_models.py  test_eda.py  test_kmeans.py  test_propensity.py  test_rfm.py  test_rfm_score.py  test_streaming.py
