[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consumer-intel"
version = "0.1.0"
description = "End-to-end consumer intelligence analytics on real e-commerce transactions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "plotly>=5.18",
    "tabulate>=0.9",
]

[project.optional-dependencies]
# Heavier modelling deps land in later phases; kept optional so Phase 0 stays light.
ml = [
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "lightgbm>=4.1",
    "xgboost>=2.0",
    "shap>=0.44",
    "lifetimes>=0.11",
    "mlxtend>=0.23",
    "kaleido==0.2.1",
]
app = [
    "streamlit>=1.31",
    "requests>=2.31",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
copilot = [
    "pydantic>=2.6",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses these in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Starlette's TestClient emits this about its own httpx usage; not our code.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated.*",
]
